Added code notes from class

--- a/async-await-vs-promise-then.html
+++ b/async-await-vs-promise-then.html
@@ -6,6 +6,6 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<script src="./async-await-vs.promise.then.js"></script>
+		<script src="./async-await-vs-promise-then.js"></script>
 	</body>
 </html>
